added authentication, login and signup auth

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -27,8 +27,9 @@
         <div class="posts-collection-list w-dyn-items w-row articles-view-top">
 
 
-
-
+          <h2>
+            Choose a category
+          </h2>
 
 
         </div>
