--- a/views/login.hbs
+++ b/views/login.hbs
@@ -3,14 +3,13 @@
     <div class="login-info-text">
       Login
     </div>
-    <form class="w-form" novalidate>
-
+    <div class="w-form form-login">
       <label for="email" class="w-form-label">Email</label>
-      <input type="text" class="w-input" id="email" required>
+      <input type="text" class="w-input" id="email">
       <label for="password" class="w-form-label">Password</label>
-      <input type="password" class="w-input" id="name" required>
+      <input type="password" class="w-input" id="password">
       <input type="submit" value="Submit" data-wait="Logging in..." class="submit-button w-button">
-    </form>
+    </div>
     <div class="w-form-fail">
     </div>
     <div class="login-info-subtitle">
