--- a/views/login.hbs
+++ b/views/login.hbs
@@ -5,7 +5,7 @@
     </div>
     <div class="w-form form-login">
       <label for="email" class="w-form-label">Email</label>
-      <input type="text" class="w-input" id="email">
+      <input type="email" class="w-input" id="email">
       <label for="password" class="w-form-label">Password</label>
       <input type="password" class="w-input" id="password">
       <input type="submit" value="Submit" data-wait="Logging in..." class="submit-button w-button">
