--- a/views/signup.hbs
+++ b/views/signup.hbs
@@ -7,7 +7,7 @@
       <label for="name" class="w-form-label">Name</label>
       <input type="text" id="name" class="w-input">
       <label for="email" class="w-form-label">Email</label>
-      <input type="text" class="w-input" id="email">
+      <input type="email" class="w-input" id="email">
       <label for="password" class="w-form-label">Password</label>
       <input type="password" class="w-input" id="password">
       <label for="confirm" class="w-form-label">Confirm Password</label>
