--- a/views/layouts/main-layout.hbs
+++ b/views/layouts/main-layout.hbs
@@ -20,9 +20,11 @@
 <body>
   <div data-collapse="medium" data-animation="default" data-duration="400" class="navigation w-nav">
     <div class="navigation-container">
-      <a href="/" class="logo w-inline-block w--current"><img
-          src="https://uploads-ssl.webflow.com/5b471332a0fccf5aded82f96/5b471562a0981421175a45a5_noiceland_logo.svg"
-          alt="" class="image-logo" /></a>
+      <a href="/" class="a-nav-title">
+        <div class="nav-title">
+          NEWSLAND
+        </div>
+      </a>
       <nav role="navigation" class="nav-menu w-nav-menu">
         <a href="/" class="navigation-link w-inline-block w--current">
           <div class="navigation-link-text">Home</div>
@@ -64,10 +66,12 @@
     <div class="container-footer">
       <div class="container">
         <div class="top-section">
-          <a href="#" class="logo cc-footer w-inline-block"><img
-              src="https://uploads-ssl.webflow.com/5b471332a0fccf5aded82f96/5b4759f1ee75f16151397de3_logo-white.svg"
-              alt="" class="image-logo" /></a>
-          <div class="footer-small-text">© 2018 Noiceland™, all rights reserved</div>
+          <a href="/" class="logo cc-footer w-inline-block">
+            <div class="nav-title">
+              NEWSLAND
+            </div>
+          </a>
+          <div class="footer-small-text">© 2019 NEWSLAND™, all rights reserved</div>
         </div>
       </div>
       <div class="separator-footer">
@@ -84,22 +88,14 @@
               <nav class="dropdown-list w-dropdown-list">
                 <div class="w-dyn-list">
                   <div class="w-dyn-items">
-                    <div class="dropdown-link w-dyn-item"><a href="/category/animation"
-                        class="dropdown-link-text">Animation</a></div>
-                    <div class="dropdown-link w-dyn-item"><a href="/category/architecture"
-                        class="dropdown-link-text">Architecture</a></div>
-                    <div class="dropdown-link w-dyn-item"><a href="/category/graphic-design"
-                        class="dropdown-link-text">Graphic Design</a></div>
-                    <div class="dropdown-link w-dyn-item"><a href="/category/illustration"
-                        class="dropdown-link-text">Illustration</a></div>
-                    <div class="dropdown-link w-dyn-item"><a href="/category/interactive-design"
-                        class="dropdown-link-text">Interactive Design</a></div>
-                    <div class="dropdown-link w-dyn-item"><a href="/category/miscellaneous"
-                        class="dropdown-link-text">Miscellaneous</a></div>
-                    <div class="dropdown-link w-dyn-item"><a href="/category/photography"
-                        class="dropdown-link-text">Photography</a></div>
-                    <div class="dropdown-link w-dyn-item"><a href="/category/product-design"
-                        class="dropdown-link-text">Product Design</a></div>
+                    <div class="dropdown-link w-dyn-item"><a href="" class="dropdown-link-text">US</a></div>
+                    <div class="dropdown-link w-dyn-item"><a href="" class="dropdown-link-text">World</a></div>
+                    <div class="dropdown-link w-dyn-item"><a href="" class="dropdown-link-text">Business</a></div>
+                    <div class="dropdown-link w-dyn-item"><a href="" class="dropdown-link-text">Tech</a></div>
+                    <div class="dropdown-link w-dyn-item"><a href="" class="dropdown-link-text">Science</a></div>
+                    <div class="dropdown-link w-dyn-item"><a href="" class="dropdown-link-text">Sports</a></div>
+                    <div class="dropdown-link w-dyn-item"><a href="" class="dropdown-link-text">Health</a></div>
+                    <div class="dropdown-link w-dyn-item"><a href="" class="dropdown-link-text">Politics</a></div>
                   </div>
                 </div>
               </nav>
@@ -109,22 +105,14 @@
               <div class="footer-links-container cc-categories">
                 <div class="w-dyn-list">
                   <div class="collection-list w-dyn-items">
-                    <div class="footer-collection-item w-dyn-item"><a href="/category/animation"
-                        class="link-footer">Animation</a></div>
-                    <div class="footer-collection-item w-dyn-item"><a href="/category/architecture"
-                        class="link-footer">Architecture</a></div>
-                    <div class="footer-collection-item w-dyn-item"><a href="/category/graphic-design"
-                        class="link-footer">Graphic Design</a></div>
-                    <div class="footer-collection-item w-dyn-item"><a href="/category/illustration"
-                        class="link-footer">Illustration</a></div>
-                    <div class="footer-collection-item w-dyn-item"><a href="/category/interactive-design"
-                        class="link-footer">Interactive Design</a></div>
-                    <div class="footer-collection-item w-dyn-item"><a href="/category/miscellaneous"
-                        class="link-footer">Miscellaneous</a></div>
-                    <div class="footer-collection-item w-dyn-item"><a href="/category/photography"
-                        class="link-footer">Photography</a></div>
-                    <div class="footer-collection-item w-dyn-item"><a href="/category/product-design"
-                        class="link-footer">Product Design</a></div>
+                    <div class="footer-collection-item w-dyn-item"><a href="" class="link-footer">US</a></div>
+                    <div class="footer-collection-item w-dyn-item"><a href="" class="link-footer">World</a></div>
+                    <div class="footer-collection-item w-dyn-item"><a href="" class="link-footer">Business</a></div>
+                    <div class="footer-collection-item w-dyn-item"><a href="" class="link-footer">Tech</a></div>
+                    <div class="footer-collection-item w-dyn-item"><a href="" class="link-footer">Science</a></div>
+                    <div class="footer-collection-item w-dyn-item"><a href="" class="link-footer">Sports</a></div>
+                    <div class="footer-collection-item w-dyn-item"><a href="" class="link-footer">Health</a></div>
+                    <div class="footer-collection-item w-dyn-item"><a href="" class="link-footer">Politics</a></div>
                   </div>
                 </div>
               </div>
