added keypress for login, refactored function on form submit

--- a/views/login.hbs
+++ b/views/login.hbs
@@ -3,13 +3,15 @@
     <div class="login-info-text">
       Login
     </div>
-    <div class="w-form form-login">
-      <label for="email" class="w-form-label">Email</label>
-      <input type="email" class="w-input" id="email">
-      <label for="password" class="w-form-label">Password</label>
-      <input type="password" class="w-input" id="password">
-      <input type="submit" value="Submit" data-wait="Logging in..." class="submit-button w-button">
-    </div>
+    <form class="form-wrap">
+      <div class="w-form form-login">
+        <label for="email" class="w-form-label">Email</label>
+        <input type="email" class="w-input" id="email">
+        <label for="password" class="w-form-label">Password</label>
+        <input type="password" class="w-input" id="password">
+        <input type="submit" value="Submit" data-wait="Logging in..." class="submit-button w-button">
+      </div>
+    </form>
     <div class="w-form-fail">
     </div>
     <div class="login-info-subtitle">
