--- a/views/index.hbs
+++ b/views/index.hbs
@@ -22,16 +22,13 @@
 <div class="latest-posts">
   <div class="container">
     <div class="section-title-text">LATEST NEWS</div>
+    <div class="pagination-btns"></div>
     <div class="posts-wrapper">
       <div class="posts-collection-list-wrapper w-dyn-list">
         <div class="posts-collection-list w-dyn-items w-row articles-view-top">
-
-
           <h2>
             Choose a category
           </h2>
-
-
         </div>
       </div>
 
