--- a/views/signup.hbs
+++ b/views/signup.hbs
@@ -3,17 +3,19 @@
     <div class="login-info-text">
       Signup
     </div>
-    <div class="w-form form-signup">
-      <label for="name" class="w-form-label">Name</label>
-      <input type="text" id="name" class="w-input">
-      <label for="email" class="w-form-label">Email</label>
-      <input type="email" class="w-input" id="email">
-      <label for="password" class="w-form-label">Password</label>
-      <input type="password" class="w-input" id="password">
-      <label for="confirm" class="w-form-label">Confirm Password</label>
-      <input type="password" class="w-input" id="confirm">
-      <input type="submit" value="Submit" data-wait="Signing up..." class="submit-button w-button">
-    </div>
+    <form class="form-wrap">
+      <div class="w-form form-signup">
+        <label for="name" class="w-form-label">Name</label>
+        <input type="text" id="name" class="w-input">
+        <label for="email" class="w-form-label">Email</label>
+        <input type="email" class="w-input" id="email">
+        <label for="password" class="w-form-label">Password</label>
+        <input type="password" class="w-input" id="password">
+        <label for="confirm" class="w-form-label">Confirm Password</label>
+        <input type="password" class="w-input" id="confirm">
+        <input type="submit" value="Submit" data-wait="Signing up..." class="submit-button w-button">
+      </div>
+    </form>
     <div class="w-form-fail">
       Incorrect
     </div>
