--- a/views/index.hbs
+++ b/views/index.hbs
@@ -21,7 +21,8 @@
 </div>
 <div class="latest-posts">
   <div class="container">
-    <div class="section-title-text">LATEST NEWS</div>
+    <div class="section-title-text">LATEST NEWS <span class="category-title"></span></div>
+    <div class="num-articles section-title-text"></div>
     <div class="pagination-btns"></div>
     <div class="posts-wrapper">
       <div class="posts-collection-list-wrapper w-dyn-list">
