added footer pagination and correct page displayed to ui

--- a/views/layouts/main-layout.hbs
+++ b/views/layouts/main-layout.hbs
@@ -61,68 +61,71 @@
 
   {{{body}}}
 
+  <div class="main-footer">
 
-  <div class="footer">
-    <div class="container-footer">
-      <div class="container">
-        <div class="top-section">
-          <a href="/" class="logo cc-footer w-inline-block">
-            <div class="nav-title">
-              NEWSLAND
-            </div>
-          </a>
-          <div class="footer-small-text">© 2019 NEWSLAND™, all rights reserved</div>
+    <div class="footer">
+      <div class="container-footer">
+        <div class="container">
+          <div class="top-section">
+            <a href="/" class="logo cc-footer w-inline-block">
+              <div class="nav-title">
+                NEWSLAND
+              </div>
+            </a>
+            <div class="footer-small-text">© 2019 NEWSLAND™, all rights reserved</div>
+          </div>
         </div>
-      </div>
-      <div class="separator-footer">
-        <div class="separator-color footer-line"></div>
-      </div>
-      <div class="container">
-        <div class="bottom">
-          <div class="bottom-1">
-            <div data-delay="0" class="dropdown w-dropdown">
-              <div class="dropdown-toggle w-dropdown-toggle">
-                <div class="icon w-icon-dropdown-toggle"></div>
-                <div>Category</div>
+        <div class="separator-footer">
+          <div class="separator-color footer-line"></div>
+        </div>
+        <div class="container">
+          <div class="bottom">
+            <div class="bottom-1">
+              <div data-delay="0" class="dropdown w-dropdown">
+                <div class="dropdown-toggle w-dropdown-toggle">
+                  <div class="icon w-icon-dropdown-toggle"></div>
+                  <div>Category</div>
+                </div>
+                <nav class="dropdown-list w-dropdown-list">
+                  <div class="w-dyn-list">
+                    <div class="w-dyn-items">
+                      <div class="dropdown-link w-dyn-item"><a href="" class="dropdown-link-text">US</a></div>
+                      <div class="dropdown-link w-dyn-item"><a href="" class="dropdown-link-text">World</a></div>
+                      <div class="dropdown-link w-dyn-item"><a href="" class="dropdown-link-text">Business</a></div>
+                      <div class="dropdown-link w-dyn-item"><a href="" class="dropdown-link-text">Tech</a></div>
+                      <div class="dropdown-link w-dyn-item"><a href="" class="dropdown-link-text">Science</a></div>
+                      <div class="dropdown-link w-dyn-item"><a href="" class="dropdown-link-text">Sports</a></div>
+                      <div class="dropdown-link w-dyn-item"><a href="" class="dropdown-link-text">Health</a></div>
+                      <div class="dropdown-link w-dyn-item"><a href="" class="dropdown-link-text">Politics</a></div>
+                    </div>
+                  </div>
+                </nav>
               </div>
-              <nav class="dropdown-list w-dropdown-list">
-                <div class="w-dyn-list">
-                  <div class="w-dyn-items">
-                    <div class="dropdown-link w-dyn-item"><a href="" class="dropdown-link-text">US</a></div>
-                    <div class="dropdown-link w-dyn-item"><a href="" class="dropdown-link-text">World</a></div>
-                    <div class="dropdown-link w-dyn-item"><a href="" class="dropdown-link-text">Business</a></div>
-                    <div class="dropdown-link w-dyn-item"><a href="" class="dropdown-link-text">Tech</a></div>
-                    <div class="dropdown-link w-dyn-item"><a href="" class="dropdown-link-text">Science</a></div>
-                    <div class="dropdown-link w-dyn-item"><a href="" class="dropdown-link-text">Sports</a></div>
-                    <div class="dropdown-link w-dyn-item"><a href="" class="dropdown-link-text">Health</a></div>
-                    <div class="dropdown-link w-dyn-item"><a href="" class="dropdown-link-text">Politics</a></div>
+              <div class="footer-categories">
+                <div class="footer-title-text">Categories</div>
+                <div class="footer-links-container cc-categories">
+                  <div class="w-dyn-list">
+                    <div class="collection-list w-dyn-items">
+                      <div class="footer-collection-item w-dyn-item"><a href="" class="link-footer">US</a></div>
+                      <div class="footer-collection-item w-dyn-item"><a href="" class="link-footer">World</a></div>
+                      <div class="footer-collection-item w-dyn-item"><a href="" class="link-footer">Business</a></div>
+                      <div class="footer-collection-item w-dyn-item"><a href="" class="link-footer">Tech</a></div>
+                      <div class="footer-collection-item w-dyn-item"><a href="" class="link-footer">Science</a></div>
+                      <div class="footer-collection-item w-dyn-item"><a href="" class="link-footer">Sports</a></div>
+                      <div class="footer-collection-item w-dyn-item"><a href="" class="link-footer">Health</a></div>
+                      <div class="footer-collection-item w-dyn-item"><a href="" class="link-footer">Politics</a></div>
+                    </div>
                   </div>
                 </div>
-              </nav>
-            </div>
-            <div class="footer-categories">
-              <div class="footer-title-text">Categories</div>
-              <div class="footer-links-container cc-categories">
-                <div class="w-dyn-list">
-                  <div class="collection-list w-dyn-items">
-                    <div class="footer-collection-item w-dyn-item"><a href="" class="link-footer">US</a></div>
-                    <div class="footer-collection-item w-dyn-item"><a href="" class="link-footer">World</a></div>
-                    <div class="footer-collection-item w-dyn-item"><a href="" class="link-footer">Business</a></div>
-                    <div class="footer-collection-item w-dyn-item"><a href="" class="link-footer">Tech</a></div>
-                    <div class="footer-collection-item w-dyn-item"><a href="" class="link-footer">Science</a></div>
-                    <div class="footer-collection-item w-dyn-item"><a href="" class="link-footer">Sports</a></div>
-                    <div class="footer-collection-item w-dyn-item"><a href="" class="link-footer">Health</a></div>
-                    <div class="footer-collection-item w-dyn-item"><a href="" class="link-footer">Politics</a></div>
-                  </div>
-                </div>
               </div>
-            </div>
 
+            </div>
           </div>
         </div>
       </div>
     </div>
   </div>
+
   <script src="https://d1tdp7z6w94jbb.cloudfront.net/js/jquery-3.3.1.min.js"></script>
   <script src="https://uploads-ssl.webflow.com/5c9475e1a934ec607e594d07/js/webflow.27d3358a8.js"></script>
   <script src="/js/bundle.js"></script>
