--- a/views/index.hbs
+++ b/views/index.hbs
@@ -23,7 +23,7 @@
   <div class="container">
     <div class="section-title-text">LATEST NEWS <span class="category-title"></span></div>
     <div class="num-articles section-title-text"></div>
-    <div class="pagination-btns"></div>
+    <div class="pagination pagination-btns"></div>
     <div class="posts-wrapper">
       <div class="posts-collection-list-wrapper w-dyn-list">
         <div class="posts-collection-list w-dyn-items w-row articles-view-top">
@@ -40,4 +40,7 @@
   <div class="separator-container">
     <div class="line-color"></div>
   </div>
+</div>
+<div class="pagination footer-pagination">
+
 </div>
