--- a/views/index.hbs
+++ b/views/index.hbs
@@ -22,14 +22,15 @@
 <div class="latest-posts">
   <div class="container">
     <div class="section-title-text">LATEST NEWS <span class="category-title"></span></div>
+
     <div class="num-articles section-title-text"></div>
     <div class="pagination pagination-btns"></div>
     <div class="posts-wrapper">
       <div class="posts-collection-list-wrapper w-dyn-list">
         <div class="posts-collection-list w-dyn-items w-row articles-view-top">
-          <h2>
-            Choose a category
-          </h2>
+          <h3 class="h3">
+            Choose a category for latest news
+          </h3>
         </div>
       </div>
 
