--- a/views/index.hbs
+++ b/views/index.hbs
@@ -21,7 +21,7 @@
 </div>
 <div class="latest-posts">
   <div class="container">
-    <div class="section-title-text">LATEST NEWS <span class="category-title"></span></div>
+    <div class="section-title-text category-title"></div>
 
     <div class="num-articles section-title-text"></div>
     <div class="pagination pagination-btns"></div>
