added comments view

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -35,6 +35,13 @@
       </div>
 
     </div>
+    <div class="comments-section"></div>
+    <div id="comment_form"></div>
+    <div class="footer-back-btn">
+      {{!-- <div class="section-title-text category-title" style="">
+        <a class="w-button back-btn">Back</a>
+      </div> --}}
+    </div>
   </div>
 </div>
 <div class="separator">
