fixed a tag links

--- a/views/layouts/main-layout.hbs
+++ b/views/layouts/main-layout.hbs
@@ -30,10 +30,10 @@
           <div class="navigation-link-text">Home</div>
           <div class="navigation-hover"></div>
         </a>
-        <a href="/saved-articles" class="navigation-link w-inline-block">
+        {{!-- <a href="/saved-articles" class="navigation-link w-inline-block">
           <div class="navigation-link-text">Saved Articles</div>
           <div class="navigation-hover"></div>
-        </a>
+        </a> --}}
         {{#if activeLogin}}
         <a href="/signup" class="navigation-link w-inline-block">
           <div class="navigation-link-text">Signup</div>
